1.Fixed shadow for all WithStylo elements 2.Refactored ScreenLoader — removed HomeHeader component usage, since ScreenLoader is only visible for 3 seconds 3.Added animation to the Loader

--- a/src/Components/Header/HomeHeader/HomeHeader.scss
+++ b/src/Components/Header/HomeHeader/HomeHeader.scss
@@ -18,6 +18,7 @@
     .headerStylo {
       color: $color-magenta-font;
       transition: 0.2s ease-in;
+      text-shadow: 0 0 2px black;
     }
   }
 }
