--- a/src/Components/ScreenLoader/screenLoader.scss
+++ b/src/Components/ScreenLoader/screenLoader.scss
@@ -1,5 +1,48 @@
+@use "../../GlobalStyle/main.scss" as *;
 .screenLoader {
-  width: 100%;
+  /// widthHeight: sets width and height; pass null to skip a dimension
+  @include widthHeight($width: 100%, $height: 100%);
   /// Centers element in viewport using fixed position, not Flex box position: fixed; top: 50%, left: 50%; transform: translate(-50%, -50%); zIndex — optional z-index
   @include bgFixedAndCenter($zIndex: 10000);
+  /// withFlex
+  /// 1-display,2-justify-content,3-align-items,4-flex-direction,5-flex-wrap,6-gap
+  @include withFlex($display: flex, $justify-content: center, $align-items: center);
+  background: linear-gradient(
+    257deg,
+    rgba(79, 0, 91, 1) 0%,
+    rgba(108, 0, 101, 1) 8.3%,
+    rgba(136, 0, 114, 1) 16.6%,
+    rgba(161, 0, 128, 1) 25%,
+    rgba(183, 0, 144, 1) 33.3%,
+    rgba(200, 0, 160, 1) 41.6%,
+    rgba(212, 0, 178, 1) 50%,
+    rgba(219, 0, 196, 1) 58.3%,
+    rgba(220, 0, 213, 1) 66.6%,
+    rgba(215, 0, 230, 1) 75%,
+    rgba(204, 0, 246, 1) 83.3%,
+    rgba(188, 3, 255, 1) 91.6%,
+    rgba(167, 6, 255, 1) 100%
+  );
+  .screenLoaderTitle {
+    /// withFont
+    /// 1-font-family, 2-font-size, 3-white-space, 4-user-select copy text = true or false, 5-font-weight, 6-line-height, 7-letter-spacing
+    @include withFont($font-family: $font-lobster-regular, $font-size: $font-header, $white-space: nowrap);
+    color: #2d0133;
+    animation: pulse 2s infinite ease-in-out;
+  }
+}
+
+@keyframes pulse {
+  0% {
+    transform: scale(1);
+    opacity: 1;
+  }
+  50% {
+    transform: scale(1.5);
+    opacity: 0.7;
+  }
+  100% {
+    transform: scale(1);
+    opacity: 1;
+  }
 }
